# PargonContainers

./: CMakeLists.txt  README.md
Dependencies/utfcpp/: CMakeLists.txt  Info.txt  License.txt
Include/Pargon/: Containers.h
Include/Pargon/Containers/: Array.h  Blueprint.h  Buffer.h  Function.h  List.h  Map.h  Sequence.h  String.h  Text.h
Source/Core/: Blueprint.cpp  Buffer.cpp  String.cpp  Text.cpp
Source/Win32/: Containers.Win32.cpp
